fix: correccion de docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     ports:
       - "${PORT}:8100" 
 
-    enviroment:
+    environment:
       - 'VITE_IMG_PROXY_URL=${VITE_IMG_PROXY_URL}'
       - 'PORT=${PORT}'
       
